== Version 1.1.4 (trunk)

Maintenance release.
Note: we've removed the metaclass method from Object. There were some generated specs that
used it, and they will now break. Just replace the metaclass call with (class << self; self; end)
and all will be well.

* Added #helper and #assigns to helper specs.
* Applied patch from Bryan Helmkamp to tweak format of generated spec.opts to be more obvious. Closes #162.
* Tweaked list of exceptions (ignores) for autotest with rspec_on_rails.
* Applied patch from Coda Hale to get the :red hook called in autotest. Closes #279.
* Applied patch from Patrick Ritchie to support --drb in spec.opts. Closes #274, #293.
* Applied patch from Rick Olson to get rspec_on_rails working with rails edge (>= 8862)
* Moved metaclass method from Object to an internal module which gets included where it is needed.
* Applied patch from Dayo Esho: and_yield clobbers return value from block. Closes #217.
* Applied patch from Bob Cotton:  ExampleGroupFactory.default resets previously registered types. Closes #222.
* Applied patch from Mike Williams to support the lib directory in rails apps with the Textmate Alternate File command. Closes #276.
* ExampleGroupMethods#xspecify aliases #xit
* A SharedExampleGroup can be created within another ExampleGroup.
* Applied patch from Bob Cotton: Nested ExampleGroups do not have a spec_path. Closes #224.
* Applied patch from Wincent Colaiuta to invert sense of "spec --diff". Closes #281.
* Allow any type of render in view specs. Closes #57.
* Applied patch from Ian White to get rspec working with edge rails (8804). Closes #271.

== Version 1.1.3

Maintenance release.
Notice to autotest users: you must also upgrade to ZenTest-3.9.0.

* Tightened up exceptions list in autotest/rails_spec. Closes #264.
* Applied patch from Ryan Davis for ZenTest-3.9.0 compatibility
* Applied patch from Kero to add step_upcoming to story listeners. Closes #253.